<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainFragment">

    <RelativeLayout
        android:id="@+id/rel"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="100dp">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true"

            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:textSize="32sp"
                android:text="@string/car_book"
                android:textStyle="bold"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:textSize="29sp"
                android:layout_gravity="center_horizontal"
                android:text="@string/insurance"
                />

        </LinearLayout>


    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:paddingTop="80dp"
        android:background="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="32sp"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:text="@string/create_account"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="20dp"
            android:textSize="18sp"
            android:id="@+id/btnCompany"
            android:text="@string/insurance_company"
            android:textColor="@color/colorWhite"
            android:background="@drawable/main_btn_shape"/>

     <androidx.appcompat.widget.AppCompatButton
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="50dp"
         android:layout_marginEnd="50dp"
         android:textSize="18sp"
         android:id="@+id/btnCustomer"
         android:layout_marginTop="20dp"
         android:text="@string/customer"
         android:textColor="@color/colorWhite"
         android:background="@drawable/main_btn_shape"
         />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:text="@string/or"
            android:layout_marginTop="25dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="28sp"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:padding="8dp"
            android:id="@+id/txtLogin"
            android:layout_marginTop="15dp"
            android:textColor="@color/colorPrimary"
            android:text="@string/login"
            />

    </LinearLayout>


</LinearLayout>