<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<LinearLayout
    android:orientation="vertical"
   android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.splash.SplashFragment">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher"
        android:layout_marginTop="35dp"
        android:layout_gravity="center_horizontal"
        />


    <LinearLayout
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="80dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:textSize="32sp"
            android:layout_marginTop="25dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/welcome_to"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:textSize="27sp"
            android:layout_gravity="center_horizontal"
            android:text="@string/car_book_insurance"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="40dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/input_layout_userName"
            app:boxCornerRadiusBottomEnd="25dp"
            app:boxCornerRadiusTopStart="25dp"
            app:boxCornerRadiusTopEnd="25dp"
            app:boxCornerRadiusBottomStart="25dp"
            app:boxStrokeColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:id="@+id/input_userName"
                android:drawableStart="@drawable/ic_user"
                android:layout_width="match_parent"
                android:drawablePadding="5dp"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textAlignment="viewStart"
                android:hint="@string/userName" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginTop="10dp"
            app:boxCornerRadiusBottomEnd="25dp"
            app:boxCornerRadiusTopStart="25dp"
            app:boxCornerRadiusTopEnd="25dp"
            app:boxCornerRadiusBottomStart="25dp"
            app:boxStrokeColor="@color/colorWhite"
            app:passwordToggleEnabled="true"
            android:textColorHint="@color/colorWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:id="@+id/input_password"
                android:drawableStart="@drawable/ic_lock"
                android:layout_width="match_parent"
                android:drawablePadding="5dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textAlignment="viewStart"
                android:hint="@string/password" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColor="@color/colorWhite"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:text="@string/login"
            android:background="@drawable/shape_btn_login"
            />



        <RelativeLayout
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="25dp"
            >

            <TextView
                android:id="@+id/areU"
                android:layout_centerVertical="true"
                android:textColor="@color/colorWhite"
                android:text="@string/you_dont_have_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>



            <TextView
                android:layout_toEndOf="@+id/areU"
                android:textColor="@color/colorWhite"
                android:text="@string/register"
                android:padding="8dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:id="@+id/register"
                android:layout_marginStart="2dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


        </RelativeLayout>


    </LinearLayout>

</LinearLayout>

</ScrollView>