<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:scaleX="-1"
            android:src="@drawable/ic_back" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:padding="8dp"

            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/car_book"
                android:textColor="@color/colorWhite"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/insurance"
                android:textColor="@color/colorWhite"
                android:textSize="20sp" />

        </LinearLayout>

    </RelativeLayout>



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_margin="10dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <RelativeLayout
                android:id="@+id/relDiamond"
                android:background="@drawable/shape_diamond"
                android:layout_marginStart="35dp"
                android:layout_marginEnd="35dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:background="@drawable/shape_diamond"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/imgDiamond"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:padding="11dp"
                        android:src="@drawable/ic_tick"
                        />
                </RelativeLayout>


                <TextView
                    android:text="@string/diamond_insurance"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:textColor="@color/colorWhite"
                    />


            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/relSilver"
                android:background="@drawable/shape_silver"
                android:layout_marginStart="35dp"
                android:layout_marginEnd="35dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:background="@drawable/shape_silver"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/imgSilver"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:padding="11dp"
                        android:src="@drawable/ic_tick"
                        />
                </RelativeLayout>


                <TextView
                    android:text="@string/silver_insurance"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:textColor="@color/colorWhite"
                    />


            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/relGold"
                android:background="@drawable/shape_gold"
                android:layout_marginStart="35dp"
                android:layout_marginEnd="35dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:background="@drawable/shape_gold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/imgGold"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:padding="11dp"
                        android:src="@drawable/ic_tick"
                        />
                </RelativeLayout>


                <TextView
                    android:text="@string/golden_insurance"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:textColor="@color/colorWhite"
                    />


            </RelativeLayout>

            <TextView
                android:layout_marginBottom="10dp"
                android:id="@+id/txtDetails"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:padding="5dp"
                android:background="@drawable/border_shape"
                />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="visible"
                android:layout_marginTop="5dp"

                >

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/recAttachments"
                    />

            </LinearLayout>



            <TextView
                android:text="@string/car_name"
                android:layout_marginStart="20dp"
                android:visibility="visible"

                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                />
            <EditText
                android:paddingStart="18dp"
                android:paddingEnd="18dp"
                android:hint="@string/car_name"
                android:layout_marginStart="20dp"
                android:visibility="visible"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/shape_border"
                android:id="@+id/edtCarNamee"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:padding="5dp"
                android:enabled="false"
                android:textColor="@color/colorBlack"
                />


            <TextView
                android:text="@string/car_model"
                android:layout_marginStart="20dp"
                android:visibility="visible"

                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                />
            <EditText
                android:hint="@string/car_model"
                android:layout_marginStart="20dp"
                android:visibility="visible"
                android:paddingStart="18dp"
                android:paddingEnd="18dp"
                android:enabled="false"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/shape_border"
                android:id="@+id/edtCarModell"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:padding="5dp"
                android:textColor="@color/colorBlack"
                />

            <TextView
                android:text="@string/car_color"
                android:layout_marginStart="20dp"
                android:visibility="visible"

                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                />

            <EditText
                android:hint="@string/car_color"
                android:layout_marginStart="20dp"
                android:visibility="visible"
                android:paddingStart="18dp"
                android:paddingEnd="18dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/shape_border"
                android:id="@+id/edtCarColorr"
                android:inputType="text"
                android:enabled="false"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:padding="5dp"
                android:textColor="@color/colorBlack"
                />

            <TextView
                android:text="@string/car_type"
                android:layout_marginStart="20dp"
                android:visibility="visible"

                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                />

            <EditText
                android:hint="@string/car_type"
                android:layout_marginStart="20dp"
                android:visibility="visible"
                android:paddingStart="18dp"
                android:paddingEnd="18dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/shape_border"
                android:id="@+id/edtCarTypee"
                android:inputType="text"
                android:enabled="false"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:padding="5dp"
                android:textColor="@color/colorBlack"
                />

            <TextView
                android:text="@string/fees"
                android:layout_marginStart="20dp"
                android:visibility="gone"

                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                />

            <EditText
                android:hint="@string/fees"
                android:layout_marginStart="20dp"
                android:visibility="gone"
                android:paddingStart="18dp"
                android:paddingEnd="18dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/shape_border"
                android:id="@+id/edtFeess"
                android:inputType="number"
                android:enabled="false"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:padding="5dp"
                android:textColor="@color/colorBlack"
                />


            <TextView
                android:text="@string/address"
                android:layout_marginStart="20dp"
                android:visibility="visible"

                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                />

            <EditText
                android:hint="@string/address"
                android:layout_marginStart="20dp"
                android:visibility="visible"
                android:paddingStart="18dp"
                android:paddingEnd="18dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/shape_border"
                android:id="@+id/edtAddress"
                android:inputType="number"
                android:enabled="false"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:padding="5dp"
                android:textColor="@color/colorBlack"
                />


            <RelativeLayout
                android:id="@+id/relBtns"
                android:layout_marginEnd="48dp"
                android:layout_marginStart="48dp"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">



            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="120dp"
                android:layout_height="45dp"
                android:background="@drawable/shape_btn_login"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:textSize="12sp"
                android:id="@+id/btnApprove"
                android:text="@string/approve"
                android:layout_alignParentStart="true"
                android:textColor="@color/colorWhite"
                />

                <androidx.appcompat.widget.AppCompatButton
                android:layout_width="120dp"
                android:layout_height="45dp"
                android:background="@drawable/shape_gold"
                android:layout_marginBottom="20dp"
                android:textSize="12sp"
                android:id="@+id/btnRefuse"
                android:text="@string/refuse"
                    android:layout_alignParentEnd="true"
                android:textColor="@color/colorWhite"
                />

            </RelativeLayout>



        </LinearLayout>

    </ScrollView>


</LinearLayout>